# magma

./: .clang-tidy  .gitignore  CMakeLists.txt
shaders/: agx.slang  brdf.slang  consts.slang  cooktorrance.slang  light.slang  parallax.slang  pbr_forward.slang  pbr_material.slang  reinhard.slang  render_targets.slang  shader.slang  surface.slang  textures.slang  tonemap.slang
shaders/compiled/: pbr_forward.spv  tonemap.spv
src/: arena.h  bindless_set.cpp  bindless_set.h  buffer.cpp  buffer.h  camera.h  device.cpp  device.h  frame_arena_buffer.cpp  frame_arena_buffer.h  framearena.cpp  framearena.h  free_list.h  freelist.h  heap_buffer.cpp  heap_buffer.h  image.cpp  image.h  imagetexture.h  input.h  light.h  logging.h  main.cpp  material.h  material_manager.cpp  material_manager.h  materialmanager.cpp  materialmanager.h  mesh.h  mesh_manager.cpp  mesh_manager.h  mesh_object.h  mesh_preset.cpp  mesh_preset.h  meshmanager.cpp  meshmanager.h  meshpreset.cpp  mip_map.cpp  mip_map.h  mipmap.cpp  (+31 more)
